<?xml version="1.0"?>
<package format="2">
  <name>move_basic</name>
  <version>0.4.1</version>
  <description>Simple navigation package</description>

  <maintainer email="toshio.ikeda@kawada.co.jp">Toshio Ikeda</maintainer>
  <maintainer email="s.krishnamra@kawada.co.jp">Big</maintainer>

  <license>BSD</license>
  <url type="website">http://www.kawada.co.jp</url>
  <url type="bugtracker">https://github.com/kwdbridgedevelopment/paint_mobile_control/issues</url>
  <url type="repository">https://github.com/kwdbridgedevelopment/paint_mobile_control</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>
  <depend>nav_core</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rostest</depend>
  <depend>mobile_cmd_control</depend>
</package>
